# federact

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  README.rst  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build_and_deploy.yaml  upload_coverage.yaml
docs/: Makefile  README.md  conf.py  index.rst
docs/_templates/autosummary/: attribute.rst  method.rst  module.rst  property.rst
docs/source/api/: index.rst
docs/source/overview/: concepts.rst  index.rst  install.rst
docs/source/overview/getting-started/: index.rst
examples/: fedavg_numpy.py
fedclypse/: __init__.py  aggregation.py  compression.py  contribution.py  data.py  entity.py  experiment.py  fedavg.py  metrics.py  model.py  optimization.py  parameters.py  partition.py  placement.py  runtime.py  selection.py  synchronization.py  topology.py
fedclypse/core/: __init__.py  aggregate.py  contribution.py  entity.py  model.py  parameters.py
fedclypse/data/: __init__.py  partition.py  source.py
fedclypse/deployment/: __init__.py  placement.py  topology.py
fedclypse/runtime/: __init__.py  metrics.py  simulation.py
fedclypse/schemes/: __init__.py  fedavg.py  roles.py
fedclypse/torch/: __init__.py  model.py
tests/: test_aggregation.py  test_compression.py  test_contribution.py  test_data.py  test_entity.py  test_experiment.py  test_fedavg.py  test_metrics.py  test_model.py  test_optimization.py  test_packaging.py  test_parameters.py  test_partition.py  test_placement.py  test_roles.py  test_runtime 2.py  test_runtime.py  test_selection.py  test_synchronization.py  test_topology.py  test_torch_model.py
tests/core/: test_aggregate.py  test_contribution.py  test_parameters.py
