[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fedclypse"
version = "0.1.0"
description = "A research framework for Federated Learning, a verticalization of eclypse"
readme = "README.rst"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Valerio De Caro" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24"]
torch = ["torch>=2.2", "torchvision>=0.17"]

[tool.setuptools.packages.find]
include = ["fedclypse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
