[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fedclypse"
version = "0.1.0"
description = "A research framework for Federated Learning, a verticalization of eclypse"
readme = "README.rst"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Valerio De Caro" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.24", "networkx>=3", "eclypse>=0.9,<0.10"]

[project.optional-dependencies]
dev = ["pytest>=8", "black>=24", "ruff>=0.5"]
emulation = ["ray>=2.5"]

[tool.setuptools.packages.find]
include = ["fedclypse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Ignore iCloud sync-conflict duplicate files (e.g. "test_runtime 2.py") so they
# are never collected/run twice.
addopts = "--ignore-glob='* [0-9].py'"

[tool.setuptools.package-data]
fedclypse = ["py.typed"]

[tool.ruff.lint]
select = ["D", "F"]        # D = pydocstyle (docstrings); F = pyflakes (undefined/unused)
ignore = ["D105"]          # magic-method docstrings (__len__, __getitem__, …) not required

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]         # tests need names + assertions, not full docstrings

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
